--- a/style.css
+++ b/style.css
@@ -144,13 +144,14 @@ As described at top of page, we want to create a grid of blocks so we'll use gri
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 10px;
+    background-color: #f5f5f6;
 }
 
 /*
 Pretty straight forward, for each card in the grid we set its margin accordingly.
 */
 .card {
-    background-color: #444;
+    background-color: #e0e0e3;
     margin: 50px;
 }
 
